--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rxdart: ^0.26.0-nullsafety.1 
-  google_maps_webservice: ^0.0.20-nullsafety.0
-  http: ">=0.13.0-nullsafety.0 <1.0.0"
+  rxdart: ^0.25.0
+  google_maps_webservice: ^0.0.16
+  http: ">=0.11.0 <1.0.0"
 
 dev_dependencies:
   flutter_test:
